Criando programa alternativo

--- a/src/makefile
+++ b/src/makefile
@@ -1,12 +1,12 @@
-CC	= gcc -g
+CC	= g++ -g
 FFLAGS	= -O3
 MAIN	= Ford_Fulkerson
 
 Ford_Fulkerson	: $(MAIN).o 
 	$(CC) $(FFLAGS) $(MAIN).o -o $(MAIN) -lm
 
-$(MAIN).o: $(MAIN).c 
-	$(CC) -c $(MAIN).c
+$(MAIN).o: $(MAIN).cpp 
+	$(CC) -c $(MAIN).cpp
 
 clean:
 	rm -f *.o
